--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "devDependencies": {
     "@faker-js/faker": "^9.0.3",
     "@playwright/test": "^1.47.2",
-    "@types/node": "^22.7.4"
+    "@types/node": "^22.7.4",
+    "dotenv": "^16.4.5"
   },
   "dependencies": {
-    "luxon": "^3.5.0"
+    "luxon": "^3.5.0",
+    "pg": "^8.13.0",
+    "ts-node": "^10.9.2"
   }
 }
