--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@faker-js/faker": "^9.0.3",
     "@playwright/test": "^1.47.2",
     "@types/node": "^22.7.4",
+    "allure-playwright": "^3.0.8",
     "dotenv": "^16.4.5"
   },
   "dependencies": {
