--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,12 @@ node_modules/
 /blob-report/
 /playwright/.cache/
 allure-results
-/datePickerValidation.spec/
-/DBsetUp.setup/
-/DBVerification.spec/
-/fixtures.spec/
-/homePageValidation.spec/
-/test.spec/
-/uiComponents.checkBox.spec/
-/uiComponents.inputField.spec/
-/uiComponents.listsAndDropdown.spec/
+/tests/datePickerValidation.spec/
+/tests/DBsetUp.setup/
+/tests/DBVerification.spec/
+/tests//fixtures.spec/
+/tests/homePageValidation.spec/
+/tests/test.spec/
+/tests/uiComponents.checkBox.spec/
+/tests/uiComponents.inputField.spec/
+/tests/uiComponents.listsAndDropdown.spec/
