--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -19,24 +19,9 @@ jobs:
       run: npx playwright install --with-deps
     - name: Run Playwright tests
       run: npx playwright test
-    - name: Get Allure history
-      uses: actions/checkout@v2
-      continue-on-error: true
+    - uses: actions/upload-artifact@v4
+      if: ${{ !cancelled() }}
       with:
-        ref: gh-pages
-        path: gh-pages
-    - name: Allure Report action from marketplace
-      uses: simple-elf/allure-report-action@master
-      id: allure-report
-      with:
-          allure_results: allure-results
-          gh_pages: gh-pages
-          allure_report: allure-report
-          allure_history: allure-history
-
-    - name: Deploy report to Github Pages
-      uses: peaceiris/actions-gh-pages@v2
-      env:
-            PERSONAL_TOKEN: ${{ secrets.TOKEN }}
-            PUBLISH_BRANCH: gh-pages
-            PUBLISH_DIR: allure-history
+        name: playwright-report
+        path: playwright-report/
+        retention-days: 30
