--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -2,8 +2,6 @@ name: Playwright Tests
 on:
   pull_request:
     branches: [ main ]
-  schedule:
-    - cron: '00 7 * * *'  
 jobs:
   test:
     timeout-minutes: 60
@@ -18,7 +16,7 @@ jobs:
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
     - name: Run Playwright tests
-      run: npx bdgen --tags "@smoke" && npx playwright test
+      run: npx bdgen --tags "@smoke" npx playwright test
     - uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
       with:
