--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,7 +1,9 @@
 name: Playwright Tests
 on:
+  push:
+    branches: [ main, master ]
   pull_request:
-    branches: [ main ]
+    branches: [ main, master ]
 jobs:
   test:
     timeout-minutes: 60
@@ -16,7 +18,7 @@ jobs:
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
     - name: Run Playwright tests
-      run: npx bdgen --tags "@smoke" npx playwright test
+      run: npx playwright test --grep "@smoke"
     - uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
       with:
