--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -4,6 +4,9 @@ on:
     branches: [ main, master ]
   pull_request:
     branches: [ main, master ]
+  schedule: 
+      - cron: '10 8 * * *'
+
 jobs:
   test:
     timeout-minutes: 60
