--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -5,7 +5,7 @@ on:
   pull_request:
     branches: [ main, master ]
   schedule: 
-      - cron: '10 8 * * *'
+      - cron: '0 * * * *'
 
 jobs:
   test:
