--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -31,3 +31,9 @@ jobs:
         name: playwright-report
         path: playwright-report/
         retention-days: 30
+    - uses: actions/upload-artifact@v4
+      if: ${{ !cancelled() }}
+      with:
+          name: blob-report
+          path: blob-report/
+          retention-days: 30
