--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -4,16 +4,15 @@ on:
     branches: [ main, master ]
   pull_request:
     branches: [ main, master ]
-  schedule: 
-      - cron: '0 * * * *'
-
 jobs:
-  test:
+  playwright-tests:
     timeout-minutes: 60
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
-        shard: [1/4, 2/4, 3/4, 4/4]
+        shardIndex: [1, 2, 3, 4]
+        shardTotal: [4]
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-node@v4
@@ -21,19 +20,47 @@ jobs:
         node-version: lts/*
     - name: Install dependencies
       run: npm ci
-    - name: Install Playwright Browsers
+    - name: Install Playwright browsers
       run: npx playwright install --with-deps
+
     - name: Run Playwright tests
-      run: npx playwright test --grep "@smoke", npx playwright test --shard=1/4, npx playwright test --shard=2/4, npx playwright test --shard=3/4, npx playwright test --shard=4/4
-    - uses: actions/upload-artifact@v4
+      run: npx playwright test --shard=${{ matrix.shardIndex }}/${{ matrix.shardTotal }}
+
+    - name: Upload blob report to GitHub Actions Artifacts
       if: ${{ !cancelled() }}
+      uses: actions/upload-artifact@v4
       with:
-        name: playwright-report
-        path: playwright-report/
-        retention-days: 30
-    - uses: actions/upload-artifact@v4
-      if: ${{ !cancelled() }}
-      with:
-          name: blob-report
-          path: blob-report/
-          retention-days: 30
+        name: blob-report-${{ matrix.shardIndex }}
+        path: blob-report
+        retention-days: 1
+
+  merge-reports:
+    # Merge reports after playwright-tests, even if some shards have failed
+    if: ${{ !cancelled() }}
+    needs: [playwright-tests]
+      
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: lts/*
+      - name: Install dependencies
+        run: npm ci
+      
+      - name: Download blob reports from GitHub Actions Artifacts
+        uses: actions/download-artifact@v4
+        with:
+              path: all-blob-reports
+              pattern: blob-report-*
+              merge-multiple: true
+      
+      - name: Merge into HTML Report
+        run: npx playwright merge-reports --reporter html ./all-blob-reports
+      
+      - name: Upload HTML report
+        uses: actions/upload-artifact@v4
+        with:
+              name: html-report--attempt-${{ github.run_attempt }}
+              path: playwright-report
+              retention-days: 14
