--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -5,14 +5,9 @@ on:
   pull_request:
     branches: [ main, master ]
 jobs:
-  playwright-tests:
+  test:
     timeout-minutes: 60
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        shardIndex: [1, 2, 3, 4]
-        shardTotal: [4]
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-node@v4
@@ -20,47 +15,13 @@ jobs:
         node-version: lts/*
     - name: Install dependencies
       run: npm ci
-    - name: Install Playwright browsers
+    - name: Install Playwright Browsers
       run: npx playwright install --with-deps
-
     - name: Run Playwright tests
-      run: npx playwright test --shard=${{ matrix.shardIndex }}/${{ matrix.shardTotal }}
-
-    - name: Upload blob report to GitHub Actions Artifacts
+      run: npx playwright test
+    - uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
-      uses: actions/upload-artifact@v4
       with:
-        name: blob-report-${{ matrix.shardIndex }}
-        path: blob-report
-        retention-days: 1
-
-  merge-reports:
-    # Merge reports after playwright-tests, even if some shards have failed
-    if: ${{ !cancelled() }}
-    needs: [playwright-tests]
-      
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: lts/*
-      - name: Install dependencies
-        run: npm ci
-      
-      - name: Download blob reports from GitHub Actions Artifacts
-        uses: actions/download-artifact@v4
-        with:
-              path: blob-report
-              pattern: blob-report-*
-              merge-multiple: true
-      
-      - name: Merge into HTML Report
-        run: npx playwright merge-reports --reporter html ./blob-report
-      
-      - name: Upload HTML report
-        uses: actions/upload-artifact@v4
-        with:
-              name: html-report--attempt-${{ github.run_attempt }}
-              path: playwright-report
-              retention-days: 14
+        name: playwright-report
+        path: playwright-report/
+        retention-days: 30
